--- a/Quiz.Services/Quiz.Services.csproj
+++ b/Quiz.Services/Quiz.Services.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Quiz.Domain\Quiz.Domain.csproj" />
+    <ProjectReference Include="..\Quiz.Repository\Quiz.Repository.csproj" />
+  </ItemGroup>
 
 </Project>
