adicionado os middleware do swagger e log

--- a/Quiz.Application/appsettings.json
+++ b/Quiz.Application/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=191.234.179.75;database=DeveloperDB01;user=developers;password=dev123DEV123",
+    "LogMongoDbConnection": "mongodb://localhost:27017/logs"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
