--- a/Quiz.Application/appsettings.json
+++ b/Quiz.Application/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=191.234.179.75;database=DeveloperDB01;user=developers;password=dev123DEV123",
+    "DefaultConnection": "server=odasaki.database.windows.net;database=ProgrammeNETProject;user=developer;password=Initial1",
     "LogMongoDbConnection": "mongodb://localhost:27017/logs"
   },
   "Logging": {
